--- a/cycle_tracker/templates/cycle_tracker/base.html
+++ b/cycle_tracker/templates/cycle_tracker/base.html
@@ -87,6 +87,15 @@
                         <a class="nav-link" href="{% url 'cycle_tracker:athletes' %}">Track New Athlete</a>
                     </li>
                 </ul>
+
+                <!-- Login/Logout Button -->
+                <div class="d-flex">
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'cycle_tracker:logout' %}" class="btn btn-danger">Logout</a>
+                    {% else %}
+                        <a href="{% url 'cycle_tracker:login' %}" class="btn btn-primary">Login</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </nav>
